package nl.avans.tokenizer;

public record Token(String literal) { }
